# mlops_zoomcamp_2023

./: LICENSE  Makefile  deployment.yaml  main_flow-deployment.yaml  mlflow.db  prefect.yaml  pyproject.toml
.prefect/: flows.json
week1/: homework-week1.ipynb
week2_Experiment_Tracking/: homework-week2.ipynb  hyper_parameter_tuning.py  prediction.py  preprocess_data.py  register_model.py  training.py
week3_orchestration/prefect/: homework-week3.ipynb  mlflow.db  orchestrate.py  orchestrate_copy.py
